# arn_cats

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
arn_cats/chm/: cheminfo_toolkit.py  mols.py
arn_cats/data/: ARN_groups.xlsx  data_load.py
arn_cats/model/: build_model.py  model_domain.py
arn_cats/visualisation/: visualise_ARN_groups.py  visualise_OneVsOne_ROC.py  visualise_OneVsRest_AUC_ROC.py  visualise_classification_report.py  visualise_confusion_matrix.py  visualise_fingerprint_heatmap.py  visualise_network.py  visualise_rf_feature_importance.py  visualise_structural_coverage.py  visualise_structure_proximity_2D.py
notebooks/: 01-creating_molecule_dataset.ipynb  02-model_domain.ipynb  03-recreating_bestRF.ipynb  04-apply_best_RF_model.ipynb  05-walkthrough.ipynb  06-testingModulesapi.ipynb
